fixed cactus newsletter picture and side spacing

--- a/css/style.css
+++ b/css/style.css
@@ -203,7 +203,7 @@ html{
     }
 
     .newsletter {
-        width: 100%;
+        width: 100% !important;
         padding: 100px 8% !important;
     }
 
@@ -213,7 +213,7 @@ html{
 
     .news-picture{
         width: 40rem !important;
-        margin-top: 200px;
+        margin-top: 80rem !important;
     }
 
     .newsletter-form {
@@ -1281,9 +1281,9 @@ footer .login{
     flex-wrap: wrap;
 }
 
-.news-picture,{
+.news-picture{
     width: 50%;
-    background: url(../images/stock-cactus.JPG) no-repeat center;
+    background: url(../images/stock-cactus.jpg) no-repeat center;
     background-size: cover;
     height: 40rem;
 }
